--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         }
 
         @font-face {
-            font-family: 'Dillan';
+            font-family: 'Poppins', sans-serif;
             /* Nome que você dará à fonte */
-            src: url('./MADEDillan-Regular.otf') format('truetype');
+            
             /* Caminho para o arquivo da fonte */
             font-weight: normal;
             /* Ajuste se necessário */
@@ -25,7 +25,7 @@
 
         body,
         html {
-            font-family: 'Dillan', sans-serif;
+            font-family: 'Poppins', sans-serif;
             height: 100%;
             overflow: hidden;
         }
@@ -210,7 +210,7 @@
 <body>
     <div class="container">
         <video autoplay muted loop id="bgVideo">
-            <source src="./Jamie Griffin  SLÁINTE   Video Part.mp4" type="video/mp4">
+            <source src="./video/MIDDLE SCKOOL (skateboarding film) - Trim.mp4" type="video/mp4">
             Seu navegador não suporta vídeos HTML5.
         </video>
         <div class="login-box">
