Coloquei um Favicon

--- a/feed.html
+++ b/feed.html
@@ -6,6 +6,10 @@
     <title>Roll and Rise - Blog de Skate</title>
     <link rel="stylesheet" href="./feed.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header>
