Arrumei a navbar+Hamburger pra mobile e afins

--- a/feed.html
+++ b/feed.html
@@ -16,7 +16,12 @@
         <div class="container">
             <div class="header-content">
                 <a href="#" class="logo">Roll and Rise</a>
-                <nav>
+                <button class="hamburger" aria-label="Menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <nav class="nav-menu">
                     <ul>
                         <li><a href="#home" class="link">Home</a></li>
                         <li><a href="#featured" class="link">Posts em Destaque</a></li>
