🎨 style: correção das url da fonte

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         @font-face {
             font-family: 'Poppins', sans-serif;
             /* Nome que você dará à fonte */
-            
+
             /* Caminho para o arquivo da fonte */
             font-weight: normal;
             /* Ajuste se necessário */
             font-style: normal;
             /* Ajuste se necessário */
+            src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
         }
 
         body,
